--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,14 @@ body {
 ul {
     list-style: none;
 }
+a {
+    text-decoration: none;
+}
+
 /*Шапка*/
 .container {
-margin: 0 auto;
-width:0 auto;
+margin:auto;
+width:auto;
 width: 1200px;
 padding-right: 15px;
 padding-left: 15px;
@@ -27,8 +31,8 @@ padding-left: 15px;
 }
 
 .section{
-padding-top: 30px;
-padding-left: 30px;
+padding-top: 50px;
+padding-bottom: 50px;
 }
 
 .nav{
@@ -123,7 +127,6 @@ letter-spacing: 0.02em;
 /*Банер*/
 
 .hero-title{ 
-padding-top: 200px;
 margin-bottom: 46px;
 margin-top: 0px;
 
@@ -248,9 +251,10 @@ text-align: center;
 }
 /*Наша команда*/
 .section-team {
+padding-top: 50px;
+padding-bottom: 50px;
 background-color: var(--background-button-color) ;
-padding-top: 30px;
-padding-left: 30px;
+
 }
 
 .team-list {
@@ -288,7 +292,7 @@ padding: 0px;
     margin-right: 30px;
 }
 
-.team-box :last-child, .benefit-item :last-child{
+.team-box, .benefit-item:last-child{
     margin-right: 0px;
 }
 
@@ -337,6 +341,7 @@ margin-top: 50px;
 .data{
 color: rgba(255, 255, 255, 0.4);
 text-align: center;
+margin: 0px;
 }
 
 .footer-media{
@@ -365,18 +370,6 @@ color:rgba(100, 100, 100, 0.6);
 color: var(--background-color)
 }
 /*Кнопка*/
-
-.button {
-
-color: var(--title-text-color);
-background-color: var(--background-button-color);
-
-font-family: Roboto;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.7;
-}
-
 .button-primary{
 display: inline-block;
 border-radius: 4px;
@@ -389,10 +382,6 @@ font-family: Roboto;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.9;
-}
-.button .nav :hover, :focus{
-    color: var(--background-color);
-    background-color: var(--accent-color);
 }
 
 
@@ -412,7 +401,8 @@ text-align: center;
     }
 
 .title-portfolio {
-
+margin: 0px;
+margin-bottom: 25px;
 color: var(--title-text-color);
 
 font-weight: 500;
@@ -421,11 +411,12 @@ line-height: 1.1;
 letter-spacing: 0.02em;
 text-align: center;
 }
-.button-portfolio{
+.portfolio{
 display: flex;
 justify-content: center;
 margin: 0;
 padding: 0;
+margin-bottom: 50px;
 
 color: var(--title-text-color);
     
@@ -434,26 +425,49 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.7;
     }
+
+.nav-portfolio {
+margin-right: 10px;
+color: var(--title-text-color);
+background-color: var(--background-button-color);
+    
+font-family: Roboto;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.7;}
+
+.nav-portfolio.last {
+    margin-right: 0;
+}
+
+.section .flex-portfolio{
+padding: 0px;
+}
+.list {
+margin: 0px;
+padding: 0px;
+margin-right: 30px;
+}
+.list:nth-child(3n) {
+margin-right: 0px;
+}
+
 .flex-portfolio {
 display: flex;
 flex-wrap: wrap;
 }
-.flex-portfolio .item{
-width: 370;
-margin-right: 30px;
-}
 
-.flex-portfolio .item:nth-child(3n) {
-margin-right: 0px;
-}
+
 
 
 /* Текст*/
 .text {
+margin: 0px;
+text-align: center;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.9;
-text-align: center;
+
 }
 
 .text-about {
