--- a/css/styles.css
+++ b/css/styles.css
@@ -125,13 +125,23 @@ letter-spacing: 0.02em;
 
 }
 /*Банер*/
+.hero {
+ max-width: 1600px;
+height: 600px;
+margin-left: auto;
+margin-right: auto;
+background-image:linear-gradient( 
+    rgba(47, 48, 58, 0.8),
+    rgba(47, 48, 58, 0.8)),
+url(../images/hero.jpg)
 
-
+}
 .hero-title{ 
 margin-bottom: 46px;
 margin-top: 0px;
+padding-top: 200px;
 
-color: var(--title-text-color);
+color: var(--background-color);
 
 font-weight: 900;
 font-size: 44px;
@@ -142,7 +152,6 @@ letter-spacing: 0.06em;
 }
 
 .button {
-
 color: var(--title-text-color);
 background-color: var(--background-button-color);
     
@@ -154,8 +163,8 @@ line-height: 1.7;
     
 .button-hero{
 display: inline-block;
-margin-left: 480px;
-margin-right: 480px;
+margin-left: 700px;
+margin-right: 650px;
 border-radius: 4px;
 padding: 10px 32px; 
 text-align: center;
@@ -170,7 +179,16 @@ line-height: 1.9;
 
 
 /*Принципи роботи*/
-
+.hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0px;
+    padding: 0px;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 .section-title {
 text-align: center;   
 margin: 0px;
@@ -184,20 +202,30 @@ font-size: 36px;
 line-height: 1.2;
 text-align: center;
 }
-.feature-list .item, .benefit-item{
+.feature-list .item-feature, .benefit-item{
     margin-right: 30px;}
 
-.feature-list .item:last-child, .benefit-item:last-child{
+.feature-list .item-feature:last-child, .benefit-item:last-child{
     margin-right: 0px;
 }
 .feature-list {
-    margin: 0px;
-    padding: 0px;
+margin: 0px;
+padding: 0px;
+padding-top: 95px;
+ display: flex;
 
-    display: flex;
+align-items: center
 
-    align-items: center
+}
 
+.item-feature ::before {
+    display: block;
+    content: "";
+    height: 120px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: chartreuse;
 }
 
 .feature-list .title {
@@ -293,7 +321,7 @@ padding: 0px;
     margin-right: 30px;
 }
 
-.team-box, .benefit-item:last-child{
+.team-last {
     margin-right: 0px;
 }
 
