--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@
     --accent-color: #2196F3 ;
     --background-color:#FFFFFF ;
     --background-button-color:#F5F4FA;
-    --background-footer-color: 2F303A;
+    --background-footer-color: #2F303A;
+    --icon-media-color:#AFB1B8;
 }
 body { 
     background-color: var(--background-color) ;
@@ -18,6 +19,7 @@ ul {
 }
 a {
     text-decoration: none;
+  
 }
 
 /*Шапка*/
@@ -202,31 +204,22 @@ font-size: 36px;
 line-height: 1.2;
 text-align: center;
 }
-.feature-list .item-feature, .benefit-item{
+.feature-list .item, .benefit-item{
     margin-right: 30px;}
 
-.feature-list .item-feature:last-child, .benefit-item:last-child{
+.feature-list .item:last-child, .benefit-item:last-child{
     margin-right: 0px;
 }
 .feature-list {
 margin: 0px;
 padding: 0px;
 padding-top: 95px;
- display: flex;
+display: flex;
 
 align-items: center
 
 }
 
-.item-feature ::before {
-    display: block;
-    content: "";
-    height: 120px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: chartreuse;
-}
 
 .feature-list .title {
 margin: 0px;
@@ -249,6 +242,15 @@ line-height: 1.7;
 
 .feature-icon{
 margin-bottom: 30px;
+}
+
+.icon-box {
+    padding-left: 100px;
+    margin-bottom: 30px;
+    border: none;
+    width: 278px;
+    height: 120px;
+    background-color: #F5F4FA
 }
 
 /*Чем мы занимаемся*/
@@ -315,6 +317,7 @@ text-align: center;
 display: flex;
 justify-content:space-evenly; 
 padding: 0px;
+margin-bottom: 30px;
 }
 
 .team-box, .benefit-item {
@@ -323,6 +326,37 @@ padding: 0px;
 
 .team-last {
     margin-right: 0px;
+}
+.team-box, .team-last {
+    background-color: var(--background-color);
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+
+.social-media {
+display: flex;
+align-items: center;
+justify-content: center;
+width: 44px;
+height: 44px;
+border-radius: 50%;
+fill: var(--icon-media-color);
+background-color: var(--background-color);
+}
+.social-media:hover{
+background-color: var(--accent-color);
+}
+.media-team {
+margin: 0px;
+padding: 0px;
+width: 20px;
+height: 20px;
+fill: var(--icon-media-color);
+}
+.media-team:hover{
+fill:var(--background-color) ;
 }
 
 
@@ -337,10 +371,32 @@ margin: 0px;
 .customer-list .title, .benefit-item {
 margin-right: 30px;
 }
-
-.customer-list .title:hover, :focus {
-background-color: var(--accent-color);
+.customer-link {
+display: flex;
+justify-content: center;
+align-items: center;
+margin-right: 30px;
+width: 170px;
+height: 90px;
+border: 1px solid #AFB1B8;
+border-radius: 4px;
+fill: var(--icon-media-color);
+background-color: var(--backgro-color);
 }
+
+.customer-link:hover{
+
+border: 1px solid var(--accent-color)
+}
+
+.customer {
+fill: var(--icon-media-color);
+}
+.customer:hover{
+
+fill: var(--accent-color) ;
+}
+
 
 /*Футер*/
 .footer {
@@ -415,9 +471,7 @@ line-height: 1.9;
 
 
 /*Иконки*/
-.icon :hover, :focus{
-    background-color: var(--accent-color);
-}
+
 /*Портфолио*/
 .section-portfolio{
 margin: auto;
